--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.9"
+version: "3.3"
 services:
 #  invoicify_db:
 #    image: postgres
@@ -15,6 +15,6 @@ services:
     environment:
       SPRING_PROFILES_ACTIVE: h2
       #SPRING_PROFILES_ACTIVE: postgres
-    depends_on:
-      - invoicify_db
+#    depends_on:
+#      - invoicify_db
 
