deleteInvoice for expired and paid invoices on progress

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,12 @@
 spring.datasource.initialization-mode=always
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 #spring.jackson.serialization.write_dates_as_timestamps=false
-
+spring.h2.console.enabled=true
+spring.h2.console.path=/console
+spring.datasource.url=jdbc:h2:mem:invoicifydb
+#spring.datasource.url=jdbc:h2:file:~/spring-boot-h2-db
+spring.datasource.username=sa
+spring.datasource.password=root
+#spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
