--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'org.asciidoctor.convert' version '1.5.8'
 	id 'java'
+//	id "org.springdoc.openapi-gradle-plugin" version "1.3.0"
 }
 
 group = 'com.galvanize'
@@ -24,6 +25,9 @@ ext {
 }
 
 dependencies {
+	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.5.9'
+//	classpath 'io.swagger.codegen.v3:swagger-codegen-maven-plugin:3.0.16'
+	//implementation 'org.springdoc:springdoc-openapi-ui'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
